@@ -86,13 +86,13 @@ RSpec.configure do |c|
   }
 
 #FIXME Windows tests fail when enabled
-#  c.trusted_server_facts = true
+#  c.trusted_server_facts = true if c.respond_to?(:trusted_server_facts)
 
   c.mock_framework = :rspec
   c.mock_with :mocha
 
   c.module_path = File.join(fixture_path, 'modules')
-  c.manifest_dir = File.join(fixture_path, 'manifests')
+  c.manifest_dir = File.join(fixture_path, 'manifests') if c.respond_to?(:manifest_dir)
 
   c.hiera_config = File.join(fixture_path,'hieradata','hiera.yaml')
 
